--- a/src/app/librarian/librarian-dashboard/librarian-dashboard.page.html
+++ b/src/app/librarian/librarian-dashboard/librarian-dashboard.page.html
@@ -114,12 +114,12 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user?.Name}}</span>
-                               <img class="img-profile rounded-circle" src="../assets/img/teacher.svg">
+                                <img class="img-profile rounded-circle" src="../assets/img/teacher.svg">
 
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#" (click)='Logout()'>
+                                <a class="dropdown-item" (click)='Logout()'>
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
                             </div>
