--- a/src/app/librarian/librarian-dashboard/librarian-dashboard.page.html
+++ b/src/app/librarian/librarian-dashboard/librarian-dashboard.page.html
@@ -148,7 +148,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">{{totalbooks}}</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                            <i class="fas fa-book fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -165,7 +165,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">{{bookspresent}}</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            <i class="fas fa-bookmark fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
