--- a/src/app/librarian/return-book/return-book.page.html
+++ b/src/app/librarian/return-book/return-book.page.html
@@ -119,7 +119,7 @@
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#" (click)='Logout()'>
+                                <a class="dropdown-item" (click)='Logout()'>
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
                             </div>
@@ -140,10 +140,12 @@
                             <button stop-parent (click)="getBooks(BookForm.value)" class="btn btn-primary btn-user btn-block">Get Books
                           </button>
                             <hr>
-                            <div class="custom-control custom-checkbox" *ngFor="let item of books">
-                                <input type="checkbox" class="custom-control-input" id="customCheck1" (click)='addreturn(item)'>
-                                <label class="custom-control-label" for="customCheck1">{{item.Name}}</label>
-                            </div>
+                           <ion-card *ngFor="let item of books">
+                                <ion-card-content>
+                                <ion-checkbox color="primary" (click)='addreturn(item)'></ion-checkbox>
+                                    <p class="books"> Name: {{item.Name}}<br> Author: {{item.Author}} </p>
+                                </ion-card-content>
+                            </ion-card>
                             <button class="btn btn-primary btn-user btn-block" (click)="ReturnBook(BookForm.value)"> Return Books
                             </button>
                         </form>
