--- a/src/app/librarian/book-list/book-list.page.html
+++ b/src/app/librarian/book-list/book-list.page.html
@@ -119,7 +119,7 @@
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#" (click)='Logout()'>
+                                <a class="dropdown-item" (click)='Logout()'>
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
                             </div>
@@ -148,7 +148,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">{{totalbooks}}</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                            <i class="fas fa-book fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -165,7 +165,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">{{bookspresent}}</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            <i class="fas fa-bookmark fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
