--- a/src/app/shared/about/about.page.html
+++ b/src/app/shared/about/about.page.html
@@ -121,7 +121,7 @@
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#" (click)='Logout()'>
+                                <a class="dropdown-item" (click)='Logout()'>
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
                             </div>
